--- a/aartics/projects/karunavr/index.htm
+++ b/aartics/projects/karunavr/index.htm
@@ -201,18 +201,18 @@
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
 			<h1 class="itemblock-itemtitle">graphic assets in sketch</h1>
-			<p class="itemblock-paragraph">We identified personas in Financial Startup Markets, and used these personas in prototypes to deliberate on features:</p>
+			<p class="itemblock-paragraph">I designed the assets in Sketch for the icons that could be used in the websites, VR applications and more to have consistency:</p>
 			<ul class="itemblock-list-ul">
-				<li class="itemblock-list-li">PATRICK: Junior Marketer</li>
-				<li class="itemblock-list-li">BRIAN: Patrick's boss</li>
-				<li class="itemblock-list-li">DANIEL: Founder</li>
-				<li class="itemblock-list-li">LIZ: Venture Capitalist</li>
+				<li class="itemblock-list-li">LOGIN</li>
+				<li class="itemblock-list-li">REGISTRATION</li>
+				<li class="itemblock-list-li">CALIBRATION</li>
+				<li class="itemblock-list-li">DASHBOARD</li>
 			</ul>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
 		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
-				<p class="itemblock-image-title">Personas representing Financial Startups:</p>
+				<p class="itemblock-image-title">Development of graphic assets in Sketch:</p>
 				<img class="itemblock-image-img" src="local_img/sketch_assets.png"/>
 			</div>
 		</div>
