--- a/aartics/projects/karunavr/index.htm
+++ b/aartics/projects/karunavr/index.htm
@@ -207,6 +207,8 @@
 				<li class="itemblock-list-li">REGISTRATION</li>
 				<li class="itemblock-list-li">CALIBRATION</li>
 				<li class="itemblock-list-li">DASHBOARD</li>
+				<li class="itemblock-list-li">SCENE SELECTION</li>
+				<li class="itemblock-list-li">Logo Development</li>
 			</ul>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
