--- a/aartics/projects/aartics_story/index.htm
+++ b/aartics/projects/aartics_story/index.htm
@@ -127,7 +127,7 @@
 				<a href="#process-1">
 					<p class="boxtitle" id="processtitle">process</p>
 					<img id="processsrc" src="../assets_v4/img/icon_process.png"/>
-					<p class="introdesc" id="processdesc"> Research  &nbsp;&nbsp;|&nbsp;&nbsp;  Wireframe &nbsp;&nbsp;|&nbsp;&nbsp; Product Design &nbsp;&nbsp;|&nbsp;&nbsp; Prototype &nbsp;&nbsp;|&nbsp;&nbsp; Feature and User Flow Map &nbsp;&nbsp;|&nbsp;&nbsp; Interaction Design &nbsp;&nbsp;|&nbsp;&nbsp; Visual Design &nbsp;&nbsp;|&nbsp;&nbsp; Product Roadmap</p>
+					<p class="introdesc" id="processdesc">3D Modeling in SketchUP &nbsp;&nbsp;|&nbsp;&nbsp; Raster image stitching for panaroma in PhotoShop &nbsp;&nbsp;|&nbsp;&nbsp; Vector SVG creation in Illustrator &nbsp;&nbsp;|&nbsp;&nbsp; HTML/ CSS/ JavaScript web development for making the website </p>
 				</a>
 			</div>
 		</div>
