--- a/aartics/projects/aartics_story/index.htm
+++ b/aartics/projects/aartics_story/index.htm
@@ -141,7 +141,6 @@
 			<h1 class="itemblock-itemtitle">imagining new media futures</h1>
 			<p class="itemblock-paragraph">For my design portfolio, aartics.com I undertook making a 3D representation my project gallery, viewed as if in a VR/AR world.</p>
 			<ul class="itemblock-list-ul">
-				<li class="itemblock-list-li">WHAT: A 3D portfolio website</li>
  
 
 			</ul>
@@ -161,8 +160,8 @@
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
 			<p class="itemblock-sectiontitle-solution">solution</p>
 			<h1 class="itemblock-itemtitle">a 3D website!</h1>
-			<p class="itemblock-paragraph">Check out my website</p>
-			<p class="itemblock-material">&nbsp;</p>
+			<p class="itemblock-paragraph">This video captures the 3D panaromic interaction on my website.</p>
+			<p class="itemblock-material"><a href="https://www.aartics.com">CHECK OUT AARTICS.COM</a></p>
 		</div>
 		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
 				<div class="row itemblock-image-title-div">
