--- a/aartics/projects/aartics_story/index.htm
+++ b/aartics/projects/aartics_story/index.htm
@@ -87,7 +87,7 @@
 		<div class="col-sm-4" id="intro-text">
 		<img src="local_img/aartics_icon_v4.png" id="intro-logo"/>
 		<h1>aartics.com</h1>
-		<p>As a UX Designer and Front-end developer and AR enthusiast, I created a 3 dimensional website for a project gallery, viewed in a standard web browser</p>
+		<p>As a UX Designer, Front-end developer and AR enthusiast, I created a 3 dimensional website for a project gallery, viewed in a standard web browser</p>
 			<div class="row">
 				<div class="col-sm-6 col-md-6 col-lg-6 intro-icon">
 					<img src="../assets_v4/img/sandtimer_solid.png"/>
@@ -113,7 +113,7 @@
 				<a href="#problem-1">		
 					<p class="boxtitle" id="problemtitle">problem</p>
 					<img id="problemsrc" src="../assets_v4/img/icon_problem.png"/>
-					<p class="introdesc" id="problemdesc">For my design portfolio, aartics.com I undertook making a 3D representation my project gallery, viewed as if in a VR/AR world.</p>
+					<p class="introdesc" id="problemdesc">For my design portfolio, aartics.com I undertook making a 3D representation of my projects as a gallery in a VR/AR world.</p>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="solution">
@@ -139,7 +139,7 @@
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_problem_color.png"/>
 			<p class="itemblock-sectiontitle-problem">problem synthesis</p>
 			<h1 class="itemblock-itemtitle">imagining new media futures</h1>
-			<p class="itemblock-paragraph">For my design portfolio, aartics.com I undertook making a 3D representation my project gallery, viewed as if in a VR/AR world.</p>
+			<p class="itemblock-paragraph">For my design portfolio, aartics.com I undertook making a 3D representation of my projects as a gallery in a VR/AR world.</p>
 			<ul class="itemblock-list-ul">
  
 
