--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -38,17 +38,8 @@
         
         // Redirect to mobile version if on mobile device and not already on mobile page
         if (isMobileDevice() && !isOnMobilePage()) {
-          // Get the current path and redirect to mobile version
-          var currentPath = window.location.pathname;
-          var mobilePath = currentPath.replace('/aartics/', '/aartics/m/');
-          
-          // If we're at the root aartics page, redirect to mobile
-          if (currentPath === '/aartics/' || currentPath === '/aartics/index.htm') {
-            window.location.href = '/aartics/m/index.htm';
-          } else {
-            // For other pages, try to redirect to mobile equivalent
-            window.location.href = mobilePath;
-          }
+          // Redirect to the mobile version
+          window.location.href = '/m/';
         }
       })();
     </script>
@@ -435,10 +426,10 @@
   <g id="credits_box" data-attach="#c1" class="attached">
       <polygon id="c1" class="cls-2" points="3647.5 378.97 3498.56 636.95 3200.22 636.57 3050.84 378.78 3200.22 121 3498.56 121 3647.5 378.97"/>
       <text x="3000" y="140" data-x-rel="-420" class="creds" id="credabme">about me:</text>
-      <text x="3000" y="180" data-x-rel="-420" class="creds">i'm aarti c sharma, a designer and engineer.</text>
+      <text x="3000" y="180" data-x-rel="-420" class="creds">i'm aarti c sharma, an engineer and designer.</text>
       <text x="3000" y="220" data-x-rel="-420" class="creds">i have over 5 years of design experience as an</text>
-      <text x="3000" y="240" data-x-rel="-420" class="creds">architect, &amp; 3 years as a technical software engineer.</text>
-      <text x="3000" y="260" data-x-rel="-420" class="creds">now i design UX for VR, and aspire to create new futures.</text>
+      <text x="3000" y="240" data-x-rel="-420" class="creds">architect, &amp; 5 years as a full stack software engineer.</text>
+      <text x="3000" y="260" data-x-rel="-420" class="creds">now i aspire to create new futures.</text>
       <text x="3000" y="280" data-x-rel="-420" class="creds">i like 3D, maps, models, data viz, open source technologies -- </text>
       <text x="3000" y="300" data-x-rel="-420" class="creds">and most of all - collaborating enthusiastically with everyone involved.</text>
       <text x="3000" y="340" data-x-rel="-420" class="creds" id="credcontact">contact me: <a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
@@ -449,9 +440,9 @@
       <text x="3000" y="500" data-x-rel="-420" class="creds">PHOTOSHOP + ILLUSTRATOR : made vector svgs from screenshots</text>
       <text x="3000" y="520" data-x-rel="-420" class="creds">JAVASCRIPT + CSS + HTML : browser animation by scroll position</text>
       <text x="3000" y="550" data-x-rel="-420" class="creds" id="credlinks"><a href="projects/aartics_story">read the story &nbsp;</a> || <a href="https://github.com/aartics/aartics_portfolio" target="_blank">&nbsp;get the files on github</a></text>
-      <text x="3000" y="580" data-x-rel="-420" class="creds" id="credits9">special shout-out to <a href="https://github.com/owings1" target="_blank">@owings1</a></text>
+      <text x="3000" y="580" data-x-rel="-420" class="creds" id="credits9"></text>
       <text x="3000" y="610" data-x-rel="-420" class="creds">---------------------------------------------------</a></text>
-      <text x="3000" y="635" data-x-rel="-420" class="creds">&copy; copyright aartics 2017</a></text>
+      <text x="3000" y="635" data-x-rel="-420" class="creds">&copy; copyright aartics 2025</a></text>
   </g>                 
         </svg>
 <!--       </div>
