--- a/index.html
+++ b/index.html
@@ -2,105 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Redirecting… | aartics</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>aartics</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="robots" content="noindex" />
 
-  <style>
-    :root { color-scheme: light dark; }
-    body {
-      margin: 0; min-height: 100svh;
-      display: grid; place-items: center;
-      font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-      line-height: 1.4;
-    }
-    .card {
-      max-width: 36rem; padding: 2rem 2.25rem; border-radius: 1.25rem;
-      box-shadow: 0 10px 30px rgba(0,0,0,.08);
-      background: canvas; color: canvastext;
-      text-align: center;
-    }
-    h1 { font-size: 1.25rem; margin: 0 0 .5rem; }
-    p { margin: 0 0 1rem; opacity: .8; }
-    .links { display: flex; gap: .75rem; justify-content: center; flex-wrap: wrap; margin-top: .5rem; }
-    a.btn {
-      padding: .6rem .9rem; border-radius: .8rem; text-decoration: none;
-      border: 1px solid color-mix(in oklab, canvastext 22%, transparent);
-    }
-    .spinner {
-      width: 36px; height: 36px; border-radius: 50%;
-      border: 3px solid color-mix(in oklab, canvastext 25%, transparent);
-      border-top-color: canvastext; margin: 0 auto 1rem; animation: spin .9s linear infinite;
-    }
-    @keyframes spin { to { transform: rotate(360deg); } }
-    .sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border: 0; }
-  </style>
-
   <script>
     (function () {
-      // --- Helpers ---
-      const qs = location.search || "";
-      const hash = location.hash || "";
-      const withTrail = (p) => p + qs + hash;
-      const alreadyOnTarget = () => {
-        const p = location.pathname.replace(/\/+$/, "");
-        return p.endsWith("/aartics/index.htm") || p.endsWith("/aartics/m/index.htm");
-      };
-
-      // Respect explicit override: ?view=desktop | ?view=mobile
-      const params = new URLSearchParams(location.search);
-      const override = params.get("view");
-      if (override === "desktop" || override === "mobile") {
-        try { sessionStorage.setItem("aartics_view_pref", override); } catch {}
-      }
-      const pref = (() => {
-        try { return sessionStorage.getItem("aartics_view_pref"); } catch { return null; }
-      })();
-
-      // Basic device test: explicit pref > UA hint > viewport width
-      const isMobileLike = () => {
-        if (pref === "mobile") return true;
-        if (pref === "desktop") return false;
-
+      // Simple device detection
+      function isMobile() {
         const ua = navigator.userAgent || "";
         const mobileUA = /Android|webOS|iPhone|iPod|BlackBerry|IEMobile|Opera Mini|Mobi/i.test(ua);
-
-        // Tablet handling: treat narrow screens as mobile
-        const narrow = typeof matchMedia === "function" ? matchMedia("(max-width: 900px)").matches : (screen && screen.width <= 900);
-
+        const narrow = window.innerWidth <= 900;
         return mobileUA || narrow;
-      };
+      }
 
-      // Avoid loops, then redirect
-      if (!alreadyOnTarget()) {
-        const target = isMobileLike()
-          ? "/aartics/m/index.htm"
-          : "/aartics/index.htm";
+      // Check if already on target page
+      function isOnTarget() {
+        const path = location.pathname.replace(/\/+$/, "");
+        return path.endsWith("/aartics/index.htm") || path.endsWith("/aartics/m/index.htm");
+      }
 
-        // Small delay so users see something if the redirect fails
-        setTimeout(() => { location.replace(withTrail(target)); }, 60);
+      // Redirect if not already on target
+      if (!isOnTarget()) {
+        const target = isMobile() ? "/aartics/m/index.htm" : "/aartics/index.htm";
+        location.replace(target + location.search + location.hash);
       }
     })();
   </script>
 </head>
 <body>
-  <main class="card" role="main" aria-busy="true">
-    <div class="spinner" aria-hidden="true"></div>
-    <h1>Sending you to the right version…</h1>
-    <p>If nothing happens, pick a version below.</p>
-    <div class="links" role="navigation" aria-label="Manual links">
-      <a class="btn" href="/aartics/index.htm">Open Desktop</a>
-      <a class="btn" href="/aartics/m/index.htm">Open Mobile</a>
-    </div>
-    <p class="sr-only">JavaScript will redirect based on your device or window size.</p>
-    <noscript>
-      <p><strong>JavaScript is off.</strong> Use one of these:</p>
-      <div class="links">
-        <a class="btn" href="/aartics/index.htm">Desktop</a>
-        <a class="btn" href="/aartics/m/index.htm">Mobile</a>
-      </div>
-    </noscript>
-  </main>
+  <p>Redirecting...</p>
+  <noscript>
+    <p>JavaScript is required. Please enable it or visit:</p>
+    <a href="/aartics/index.htm">Desktop Version</a> | 
+    <a href="/aartics/m/index.htm">Mobile Version</a>
+  </noscript>
 </body>
 </html>
