--- a/aartics/m/index.htm
+++ b/aartics/m/index.htm
@@ -3,6 +3,20 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script>
+		// Force correct zoom level on page load
+		window.addEventListener('load', function() {
+			// Reset any browser zoom/accessibility scaling
+			document.body.style.fontSize = '16px';
+			document.documentElement.style.fontSize = '16px';
+			
+			// Force viewport to be exactly what we want
+			var viewport = document.querySelector('meta[name="viewport"]');
+			if (viewport) {
+				viewport.setAttribute('content', 'width=device-width, initial-scale=1.0');
+			}
+		});
+	</script>
 	<title>aartics</title>
 	<link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -14,6 +28,15 @@
       href="favico.png">
     <style>
       @import url('https://fonts.googleapis.com/css?family=ABeeZee');
+      
+      /* Prevent accessibility font scaling and ensure correct zoom */
+      html {
+        font-size: 16px !important;
+        -webkit-text-size-adjust: 100% !important;
+        -moz-text-size-adjust: 100% !important;
+        -ms-text-size-adjust: 100% !important;
+        text-size-adjust: 100% !important;
+      }
     </style>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
